<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tju.twist.atinote.ColorSettingActivity">
    <RelativeLayout

        android:layout_width="fill_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_weight="1"
            android:id="@+id/btn_colorSetting_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/btns_margin"
            android:layout_gravity="center_vertical"
            android:src="@drawable/btn_back"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_weight="10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size"
            android:text="@string/colorSetting"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/icon_size"
        android:background="@color/backgroundGray"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/icon_size">

        <TextView
            android:layout_weight="1"
            android:text="    "
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:layout_weight="1"
            android:text="@string/text_item0"
            android:textColor="@color/lightGray"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:layout_weight="1"
            android:text="@string/text_item1"
            android:textColor="@color/lightGray"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:layout_weight="1"
            android:text="@string/text_item2"
            android:textColor="@color/lightGray"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:layout_weight="1"
            android:text="@string/text_item3"
            android:textColor="@color/lightGray"
            android:gravity="center"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:layout_weight="1"
            android:text="@string/text_item4"
            android:textColor="@color/lightGray"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginBottom="2dp"
        android:background="@color/white">

        <CheckBox
            android:id="@+id/checkbox0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@color/color0"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@color/color1"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@color/color2"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@color/color3"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center_vertical"
            android:background="@color/color4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginBottom="2dp"
        android:background="@color/white">

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@color/color00"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@color/color01"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@color/color02"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@color/color03"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center_vertical"
            android:background="@color/color04"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginBottom="2dp"
        android:background="@color/white">

        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@color/color10"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@color/color11"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@color/color12"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@color/color13"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center_vertical"
            android:background="@color/color14"/>

    </LinearLayout>


</LinearLayout>
